--- a/src/components/Cleaningservices.css
+++ b/src/components/Cleaningservices.css
@@ -63,6 +63,12 @@ a {
 ul {
   list-style: none;
 }
+@media screen and (max-width: 480px) {
+  .list {
+    max-height: 300px;
+    max-width: 480px;
+  }
+}
 h1,
 h2,
 h3,
@@ -104,13 +110,19 @@ img {
   margin: auto;
   padding: 0 15px;
 }
+@media screen and (max-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
 
 /* #grid */
 .grid {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(15, 1fr);
   gap: 30px;
 }
+
 /* #section */
 .section-padding {
   padding: 60px 0;
@@ -213,6 +225,12 @@ textarea.input-control {
   z-index: 2;
   padding: 10px 0;
 }
+@media screen and (max-width: 480px) {
+  .header {
+    padding: 5px 0;
+  }
+}
+
 .header::before {
   content: "";
   position: absolute;
@@ -275,8 +293,14 @@ textarea.input-control {
 }
 .home-text,
 .home-img {
-  grid-column: span 6;
+  grid-column: span 7;
   align-self: center;
+}
+@media screen and (max-width: 480px) {
+  .home-img {
+    grid-column: span 10;
+    align-self: center;
+  }
 }
 .home-text h1 {
   font-size: var(--fs-4xl);
@@ -314,8 +338,14 @@ textarea.input-control {
 }
 .about-img,
 .about-text {
-  grid-column: span 6;
+  grid-column: span 7;
   align-self: center;
+}
+@media screen and (max-width: 480px) {
+  .about-img {
+    grid-column: span 10;
+    align-self: center;
+  }
 }
 .about-img .img-box {
   max-width: 400px;
@@ -346,6 +376,13 @@ textarea.input-control {
   left: 0;
   transform: translate(-50%, -50%);
 }
+@media screen and (max-width: 480px) {
+  .about-img .box-1 {
+    padding-right: 0;
+    left: auto;
+    transform: translate(-50%, -10%);
+  }
+}
 .about-img .box span {
   color: var(--text-white);
   font-weight: bold;
@@ -363,6 +400,12 @@ textarea.input-control {
 .services-item {
   grid-column: span 3;
   text-align: center;
+}
+@media screen and (max-width: 480px) {
+  .services-item {
+    grid-column: span 10;
+    text-align: center;
+  }
 }
 .services-item .img-box {
   height: 140px;
@@ -388,12 +431,18 @@ textarea.input-control {
 }
 /* #pricing */
 .pricing-item {
-  grid-column: span 4;
+  grid-column: span 5;
   background-color: var(--bg-color);
   box-shadow: var(--shadow);
   padding: 30px;
   border-radius: 10px;
   text-align: center;
+}
+@media screen and (max-width: 480px) {
+  .pricing-item {
+    grid-column: span 10;
+    text-align: center;
+  }
 }
 .pricing-header h3 {
   text-transform: capitalize;
@@ -446,8 +495,13 @@ textarea.input-control {
 .contact-info {
   grid-column: span 5;
 }
+@media screen and (max-width: 480px) {
+  .contact-info {
+    grid-column: span 10;
+  }
+}
 .contact-form {
-  grid-column: span 7;
+  grid-column: span 9;
 }
 .contact-info-item {
   position: relative;
